# rust-gpu-test

./: Cargo.toml
app/src/: main.rs
shader/: Cargo.toml
shader/src/: lib.rs  vertex.rs
